[package]
name = "bevy_ed2d"
version = "0.1.0"
edition = "2021"
authors = ["Johan Helsing <johanhelsing@gmail.com>"]
categories = ["game-development"]
description = "A bevy 2d editor in one line of code"
keywords = ["gamedev", "bevy"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/johanhelsing/bevy_ed2d"

[dependencies]
bevy = {version = "0.14", default-features = false, features = [
    "bevy_sprite",
    "bevy_pbr", # needed for picking not to crash
    "bevy_ui" # needed for ui picking
]}
bevy_pancam = "0.14"
bevy-inspector-egui = "0.25"
egui_dock = "0.13"
# bevy_mod_picking = "0.20"
bevy_mod_picking = {git = "https://github.com/johanhelsing/bevy_mod_picking", branch = "fix-sprite-viewport"}

[dev-dependencies]
bevy = {version = "0.14", default-features = false, features = [
    "bevy_winit",
]}